{
  "version": 4,
  "terraform_version": "1.3.8",
  "serial": 563,
  "lineage": "a458cd82-9910-8684-8197-3fc146df6915",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e50ac020118cb7f",
            "association_id": "eipassoc-06a5780a43d53805f",
            "domain": "vpc",
            "id": "eipalloc-06e50ac020118cb7f",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0bd1fe0279861913e",
            "private_dns": "ip-10-10-10-110.us-east-2.compute.internal",
            "private_ip": "10.10.10.110",
            "public_dns": "ec2-18-219-87-86.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.87.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "riayz-dev-nat_eip"
            },
            "tags_all": {
              "Name": "riayz-dev-nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ee259273d406090",
            "association_id": "eipassoc-0a84697e012781b1d",
            "domain": "vpc",
            "id": "eipalloc-02ee259273d406090",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e46ed3bef20556bb",
            "private_dns": "ip-10-10-15-152.us-east-2.compute.internal",
            "private_ip": "10.10.15.152",
            "public_dns": "ec2-3-21-150-31.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.150.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "riayz-dev-nat_eip"
            },
            "tags_all": {
              "Name": "riayz-dev-nat_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:655485434517:internet-gateway/igw-068984c1474b13f6f",
            "id": "igw-068984c1474b13f6f",
            "owner_id": "655485434517",
            "tags": {
              "Name": "riayz-dev-igw"
            },
            "tags_all": {
              "Name": "riayz-dev-igw"
            },
            "vpc_id": "vpc-06e5397fd7d3581c8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06e50ac020118cb7f",
            "connectivity_type": "public",
            "id": "nat-0d1bc31b87f9bdede",
            "network_interface_id": "eni-0bd1fe0279861913e",
            "private_ip": "10.10.10.110",
            "public_ip": "18.219.87.86",
            "subnet_id": "subnet-0ecc2863baf19883a",
            "tags": {
              "Name": "riayz-dev-nat_gw-2a"
            },
            "tags_all": {
              "Name": "riayz-dev-nat_gw-2a"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ee259273d406090",
            "connectivity_type": "public",
            "id": "nat-04a447ef6c7ab934d",
            "network_interface_id": "eni-0e46ed3bef20556bb",
            "private_ip": "10.10.15.152",
            "public_ip": "3.21.150.31",
            "subnet_id": "subnet-08d6326f29756e1b1",
            "tags": {
              "Name": "riayz-dev-nat_gw-2b"
            },
            "tags_all": {
              "Name": "riayz-dev-nat_gw-2b"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:655485434517:route-table/rtb-0bfaa1ba67b4f0d6c",
            "id": "rtb-0bfaa1ba67b4f0d6c",
            "owner_id": "655485434517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d1bc31b87f9bdede",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "riayz-dev-privrt-2a"
            },
            "tags_all": {
              "Name": "riayz-dev-privrt-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e5397fd7d3581c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:655485434517:route-table/rtb-0f5d80960c650f41c",
            "id": "rtb-0f5d80960c650f41c",
            "owner_id": "655485434517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04a447ef6c7ab934d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "riayz-dev-privrt-2b"
            },
            "tags_all": {
              "Name": "riayz-dev-privrt-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e5397fd7d3581c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:655485434517:route-table/rtb-05b6e7f3dee553557",
            "id": "rtb-05b6e7f3dee553557",
            "owner_id": "655485434517",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-068984c1474b13f6f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "riayz-dev-pubrt"
            },
            "tags_all": {
              "Name": "riayz-dev-pubrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e5397fd7d3581c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bbc28f201fabd98",
            "route_table_id": "rtb-0bfaa1ba67b4f0d6c",
            "subnet_id": "subnet-0975badf7f35db983"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ba6a068b6a7bd26",
            "route_table_id": "rtb-0f5d80960c650f41c",
            "subnet_id": "subnet-04ec97efee95b3cb9"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091b33fde348a4e5f",
            "route_table_id": "rtb-05b6e7f3dee553557",
            "subnet_id": "subnet-0ecc2863baf19883a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049524685092481b6",
            "route_table_id": "rtb-05b6e7f3dee553557",
            "subnet_id": "subnet-08d6326f29756e1b1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:655485434517:security-group/sg-0747563b8eed5dac9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0747563b8eed5dac9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": null,
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32000
              },
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "riayz-dev-allow-ssh-http-https",
            "name_prefix": "",
            "owner_id": "655485434517",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06e5397fd7d3581c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:655485434517:subnet/subnet-0975badf7f35db983",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0975badf7f35db983",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655485434517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "riayz-dev-priv-2a",
              "kubernetes.io/cluster/riayz-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "riayz-dev-priv-2a",
              "kubernetes.io/cluster/riayz-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06e5397fd7d3581c8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:655485434517:subnet/subnet-04ec97efee95b3cb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.25.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ec97efee95b3cb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "655485434517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "riayz-dev-priv-2b",
              "kubernetes.io/cluster/riayz-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "riayz-dev-priv-2b",
              "kubernetes.io/cluster/riayz-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06e5397fd7d3581c8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:655485434517:subnet/subnet-0ecc2863baf19883a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecc2863baf19883a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "655485434517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "riayz-dev-pub-2a",
              "kubernetes.io/cluster/riayz-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "riayz-dev-pub-2a",
              "kubernetes.io/cluster/riayz-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06e5397fd7d3581c8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:655485434517:subnet/subnet-08d6326f29756e1b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.10.15.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d6326f29756e1b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "655485434517",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "riayz-dev-pub-2b",
              "kubernetes.io/cluster/riayz-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "riayz-dev-pub-2b",
              "kubernetes.io/cluster/riayz-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06e5397fd7d3581c8"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:655485434517:vpc/vpc-06e5397fd7d3581c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0bd408762bc048dd4",
            "default_route_table_id": "rtb-03aaa6c1e8c290c88",
            "default_security_group_id": "sg-0369a151c09a025f5",
            "dhcp_options_id": "dopt-0a1780a02d56bb382",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e5397fd7d3581c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03aaa6c1e8c290c88",
            "owner_id": "655485434517",
            "tags": {
              "Name": "riayz-dev-vpc"
            },
            "tags_all": {
              "Name": "riayz-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}